refactor: changed name of some resource string values

--- a/app/src/main/res/layout/tile_member.xml
+++ b/app/src/main/res/layout/tile_member.xml
@@ -16,6 +16,6 @@
         android:id="@+id/moneyPaidTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/moneyPaid" />
+        android:text="@string/money_paid" />
 
 </LinearLayout>
