--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="@string/moneyPaid"
+        android:text="@string/money_paid"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/nameEt"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="@string/purchasedItems"
+        android:text="@string/purchased_items"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/moneyPaidEt"
         app:layout_constraintStart_toStartOf="parent"
