--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:text="@string/money_paid"
+        android:text="@string/money_paid_activity"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/nameEt"
         app:layout_constraintStart_toStartOf="parent"
